BUGFIX: Icon list not stretching all the way across the screen space

--- a/css/layout.sidepanel.css
+++ b/css/layout.sidepanel.css
@@ -29,6 +29,7 @@ body {
 #window-list {
 	margin-left: 205px;
 	height: 100%;
+	width: 100%;
 	overflow: auto;
 	position: fixed;
 }
